# ZelHash-reference-miner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clHost.cpp  clHost.h  main.cpp  zelStratum.cpp  zelStratum.h
kernels/: equihash_125_4.cl  equihash_125_4_inc.h
